--- a/P7/P7.ipynb
+++ b/P7/P7.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Práctica 7: Red Neuronal Multiclase. Evaluacion detallada \n",
+    "\n",
+    "Grupo 5: Jorge Ortega y Daniela Vidal"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 52,
    "metadata": {},
