--- a/P9/p9.ipynb
+++ b/P9/p9.ipynb
@@ -624,6 +624,20 @@
     "\n",
     "print(\"Train accuracy: %.2f%%\" % train_accuracy, \"Test accuracy: %.2f%%\" % test_accuracy)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Hemos obtenido una precisión del 98% en el conjunto de datos de entrenamiento y un 90% en el conjunto de datos de test. Lo cual nos muestra una alta tasa de acierto sin obtener sobreaprendizaje en el conjunto de datos de entrenamiento ya que se generaliza de manera adecuada para nuevos datos.\n",
+    "\n",
+    "Hemos visto que la profundidad máxima del árbol es el parametro mas importante, ya que si es muy grande se produce sobreaprendizaje y si es muy pequeña no se generaliza bien.\n",
+    "\n",
+    "## Conclusiones\n",
+    "\n",
+    "Hemos visto que el XGBoost es un buen algoritmo para la construcción de árboles de decisión, ya que permite obtener una tasa de acierto muy alta sin sobreaprendizaje. Además, nos obtenemos los parámetros más importantes para el problema que de manera sencilla. "
+   ]
   }
  ],
  "metadata": {
