--- a/PF/PF.ipynb
+++ b/PF/PF.ipynb
@@ -2293,7 +2293,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Obtenemos una precisión de 99.65% en entrenamiento y 99.25% en test. Estos resultados son muy buenos y podemos deducir de los datos que no las variables presentan una relación no lineal entre ellas. Esto lo sabemos porque hemos mapeado los datos a un espacio de mayor dimensión y hemos obtenido un resultado muy bueno ya que si se hace sin mapearlos se obtiene como mucho un 60% de precisión. De cualquier manera esto se podía intuir ya que en la matriz de correlación no se veían variables que estuvieran linealmente relacionadas entre sí.  "
+    "Obtenemos una precisión de 99.65% en entrenamiento y 99.25% en test. Estos resultados son muy buenos y podemos deducir de los datos que no las variables presentan una relación no lineal entre ellas. Esto lo sabemos porque hemos mapeado los datos a un espacio de mayor dimensión y hemos obtenido un resultado muy bueno ya que si se hace sin mapearlos se obtiene como mucho un 60% de precisión. De cualquier manera esto se podía intuir ya que en la matriz de correlación no se veían variables que estuvieran linealmente relacionadas entre sí. Tener una precisión tan alta en entrenamiento podría indicar que el modelo está sobreajustado, pero como la precisión en test es muy alta, podemos decir que el modelo no sufre de sobreajuste. Sino que el modelo se generaliza muy bien a los datos de test. "
    ]
   },
   {
@@ -2880,6 +2880,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Con el modelo con los mejores parametros obtenidos anteriormente hemos conseguido una precisión de entrenamiento del 98%, lo que podria darnos la impresión de que exista un sobreaprendizaje de los datos de entrenamiento y no generalizase bien para nuevos datos de test. Esta idea podemos confirmar que es erronea puesto que al comprobar la precisión de los datos de test y ver que se trata de un 92% de acierto podemos ver que el modelo generaliza bien los nuevos datos y que no se trata de uu sobreaprendizaje sobrte los datos de entrenamiento. \n",
+    "\n",
+    "Además, es relevante destacar que tanto la precisión de entrenamiento como la de prueba son valores notablemente altos. Esto respalda la afirmación de que el modelo exhibe un desempeño sobresaliente y demuestra su eficacia en la tarea analizada."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Estudio de la precisión:\n"
    ]
   },
@@ -2982,6 +2992,16 @@
     "plt.ylabel(\"Clase real\")\n",
     "plt.title(\"Matriz de confusión\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En la matriz de confusión obtenida podemos observar que el modelo ha clasificado correctamente la mayoria de los gestos, puesto que la clase reall coincide con la asignada. Sin embargo, el gesto 3 le ha sido mas dificil de clasificar que el resto ya que siendo un papel le h aasignado okey 62 veces ademas de las 14 tijeras y las 3 piedras. Pese a esto el numero de aciertos siendo 510 es mucho mayor y sigue acertando la gran mayoría de las veces. El resto de gestos tambien han sido clasificados correctamente en su mayoria, con aun menos errores al asiganar que el gesto 3.\n",
+    "\n",
+    "Podemos llegar a la conclusión de que el modelo es bastante preciso y fiable ya que el nuemro de aciertos es muy elevado y el numero de errores es muy bajo."
    ]
   },
   {
@@ -3664,6 +3684,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "En el árbol podemos observar que el sensor 6 es bastante importante a la hora de clasificar puesto que para la gran cantidad de ejemplos que tiene, con el podemos detectar con bastante precision las piedras pese a no ser un nodo puro, pero si tiene un gini bastante bajo. El sensor 1 nos permite en su gran mayoría poder clasificar con acierto si es papel, si el sensor1 es menor que -2.4 o mayor que 1.1. El sensor 5 nos permite diferenciar también en gran parte los gestos de Okey al ser menores que -7.688 o mayores q 7.062. Pese a tener una tasa de aciertos mas o menos buena ninguno de los nodos son puros y el gini es bajo pero no tanto como nos gustaría."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7.2 Árbol de decisión con XGBoost <a class=\"anchor\" id=\"Árbol-de-decisión-con-XGBoost\"></a>"
    ]
   },
@@ -4198,6 +4226,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Al emplear el modelo de arbol XGBoost hemos obtenido unas precisiones mucho mejores a las anteriores puesto que este modelo funciona mucho mejor para nuestro dataset. Hemos obtenido una precisión del 999% en el entrenamiento pero no produce un sobreaprendizaje puesto que para datos nuevos obtenemos una precisión muy alta del 95.5% para los test y viendo asi que generaliza mucho mejor que el anterior modelo.\n",
+    "\n",
+    "El anterior modelo tenia un 62% para el conjunto de entrenamiento y un 61% para el conjunto de test, por lo que este modelo es mucho mejor para la clasificación de nuestro problema."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 120,
    "metadata": {},
@@ -4252,6 +4290,14 @@
     "plt.ylabel(\"Clase real\")\n",
     "plt.title(\"Matriz de confusión\")\n",
     "plt.show()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "En la matriz de confusión de este nuevo modelo con XGBoost podemos ver que el numero de aciertos es mucho mayor, incluso para el gesto 3 el cual antes nos daba problemas teniendo un mayor numero de errores y ahora pese a seguir siendo el que menos aciertos tiene, tiene muchos menos errores que antes. Podemos observar que todos los gestos superan los 550 aciertos y no superan los 50 errores, dandonos una fiabilidad muy alta para la clasificación de los gestos."
    ]
   },
   {
