--- a/PF/PF.ipynb
+++ b/PF/PF.ipynb
@@ -64,9 +64,7 @@
     "\n",
     "Para asegurarse de la calidad de los datos, se realizaron 6 repeticiones de cada gesto en la que se empezaba y se paraba de medir con el gesto sostenido.\n",
     "\n",
-    "Se trata de 4 datasets de alrededor de 2900 filas cada uno con la actividad de cada gesto. \n",
-    "\n",
-    "Sin embargo hemos decidido usar solo 3 de los 4 datasets, ya que la dimensionalidad de los datos es muy grande y para algunos algoritmos de aprendizaje automático se hace muy tedioso. Por ello hemos decidido usar solo los datos de los gestos de piedra, papel y tijeras."
+    "Se trata de 4 datasets de alrededor de 2900 filas cada uno con la actividad de cada gesto. "
    ]
   },
   {
